Add Login functionality as much as possible

--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/vue-select": "^2.4.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-select": "^2.5.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^3.0.0",
