--- a/svr/package.json
+++ b/svr/package.json
@@ -11,6 +11,7 @@
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "errorhandler": "^1.5.0",
