--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/cors": "^2.8.4",
     "@types/vue-select": "^2.4.0",
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
