--- a/svr/package.json
+++ b/svr/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.4",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
