--- a/svr/package.json
+++ b/svr/package.json
@@ -12,6 +12,7 @@
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
+    "@types/sqlite3": "^3.1.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -20,6 +21,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "sqlite3": "^4.0.3",
     "tslib": "^1.9.3"
   }
 }
