--- a/svr/package.json
+++ b/svr/package.json
@@ -15,6 +15,7 @@
     "@types/sqlite3": "^3.1.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "errorhandler": "^1.5.0",
     "express": "~4.16.0",
