--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "cross-env NODE_ENV=production vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy": "firebase deploy",
     "test:e2e": "vue-cli-service test:e2e",
@@ -15,6 +15,7 @@
     "@types/vue-select": "^2.4.0",
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "cross-env": "^5.2.0",
     "v-slim-dialog": "0.0.9",
     "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
