--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vue-select": "^2.5.1"
+    "vue-select": "^2.5.1",
+    "vue-textarea-autosize": "^1.0.4"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^3.0.0",
